[package]
name = "libpq-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "rust/lib.rs"
name = "pq_rs_node"

[dependencies]
neon = { version = "1.0" }
openssl-sys = { version = "0.9", features = [ "vendored" ] }
polling = { version = "3.7" }
pq-sys = { version =  "0.6", features = [ "bundled" ] }
libc = "0.2"
