[package]
name = "libpq-rs"
version = "0.1.0"
edition = "2021"
authors = ["Pier Fumagalli <pier@usrz.com>"]
description = "Yet another wrapper of LibPQ for NodeJS"
repository = "https://github.com/usrz/libpq-rs"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]
name = "pq_rs_node"

[dependencies]
napi-ts = { version = "0.0.1", path = "../napi-ts" }
openssl-sys = { version = "0.9" }
polling = { version = "3.7" }
pq-sys = { version =  "0.6", features = [ "bundled" ] }
